--- a/ScrollView/Base.lproj/Main.storyboard
+++ b/ScrollView/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="gek-eI-pMP">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="o3X-N4-Cti">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
@@ -8,19 +8,19 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Image Controller-->
         <scene sceneID="Te9-SD-Jot">
             <objects>
-                <viewController id="wpG-U4-cE8" sceneMemberID="viewController">
+                <viewController id="wpG-U4-cE8" customClass="ImageViewController" customModule="ScrollView" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Kh-aA-Q77">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" delaysContentTouches="NO" minimumZoomScale="1.3" translatesAutoresizingMaskIntoConstraints="NO" id="kOg-zu-tJs">
-                                <rect key="frame" x="0.0" y="44" width="414" height="818"/>
+                                <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="img" translatesAutoresizingMaskIntoConstraints="NO" id="id9-KF-lZ1">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="818"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="774"/>
                                     </imageView>
                                 </subviews>
                                 <constraints>
@@ -47,10 +47,21 @@
                             <constraint firstItem="kOg-zu-tJs" firstAttribute="bottom" secondItem="Wsy-Ym-Vna" secondAttribute="bottom" id="zSd-zZ-3OE"/>
                         </constraints>
                     </view>
+                    <navigationItem key="navigationItem" title="Image Controller" id="ohu-ro-C5O">
+                        <barButtonItem key="rightBarButtonItem" systemItem="action" id="a9K-mV-wTZ">
+                            <connections>
+                                <action selector="shareImage:" destination="wpG-U4-cE8" id="K4U-sj-9qJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="imageView" destination="id9-KF-lZ1" id="YQY-tH-Zal"/>
+                        <outlet property="scrollView" destination="kOg-zu-tJs" id="NOj-oH-4rb"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KDN-yC-pMt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1089.8550724637682" y="116.51785714285714"/>
+            <point key="canvasLocation" x="2910.144927536232" y="116.51785714285714"/>
         </scene>
         <!--Form View Controller-->
         <scene sceneID="uxA-Dx-ioA">
@@ -303,6 +314,24 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YHU-sZ-dzm" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="VZx-0B-KN2">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="o3X-N4-Cti" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="TeC-Va-nYd">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="wpG-U4-cE8" kind="relationship" relationship="rootViewController" id="R4q-8k-E9O"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="RPX-EE-RTI" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2000.0000000000002" y="116.51785714285714"/>
         </scene>
     </scenes>
     <resources>
